--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="public/favicon.webp"> 
+  <link rel="stylesheet" href="./styles/global.css"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sandbox Universe</title>
 </head>
 <body>
-  <h2>Kurt</h2>
-  <h2>Ivan</h2>
+  <div class="wrapper">
+    <h1>Sandbox Universe</h1>
+  </div>
 </body>
 </html>
