--- a/index.html
+++ b/index.html
@@ -1,15 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="public/favicon.webp"> 
-  <link rel="stylesheet" href="./styles/global.css"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sandbox Universe</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sandbox Universe - Minecraft Community</title>
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
-  <div class="wrapper">
-    <h1>Sandbox Universe</h1>
-  </div>
+    <div class="wrapper">
+        <header>
+            <h1>Sandbox Universe</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home" class="nav-link">Home</a></li>
+                    <li><a href="#about" class="nav-link">About</a></li>
+                    <li><a href="#servers" class="nav-link">Servers</a></li>
+                    <li><a href="#mods" class="nav-link">Mods</a></li>
+                    <li><a href="#contacts" class="nav-link">Contacts</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section id="home" class="section active">
+                <h2>Welcome to Sandbox Universe</h2>
+                <p>Your ultimate Minecraft community hub!</p>
+            </section>
+
+            <section id="about" class="section">
+                <h2>About Our Community</h2>
+                <p>We are passionate Minecraft players creating amazing worlds and experiences.</p>
+            </section>
+
+            <section id="servers"></section>
+                <h2>Our Minecraft Servers</h2>
+                <div class="servers-carousel">
+                    <div class="carousel-container">
+                        <div class="server-card">
+                            <div class="server-card-image">
+                                <img src="/api/placeholder/300/200" alt="Survival Realm">
+                            </div>
+                            <div class="server-card-content">
+                                <h3>Survival Realm</h3>
+                                <p>Classic survival experience with a twist</p>
+                                <div class="server-details">
+                                    <div class="server-detail-item">
+                                        <span>🏆</span>
+                                        <p>PvE Focused</p>
+                                    </div>
+                                    <div class="server-detail-item">
+                                        <span>💰</span>
+                                        <p>Economy System</p>
+                                    </div>
+                                    <div class="server-ip">
+                                        <input type="text" value="survival.sandboxuniverse.mc" readonly>
+                                        <button class="copy-ip">Copy IP</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-controls">
+                            <button class="prev-btn">◀</button>
+                            <button class="next-btn">▶</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+  
+            </section>
+
+                <section id="contacts">
+                    <h2>Our Team</h2>
+                    <div class="team-container">
+                        <div class="team-members">
+                            <div class="team-member">
+                                <div class="member-avatar">
+                                    <img src="/assets/pics/ivan.jpeg" alt="">
+                                    <div class="avatar-border"></div>
+                                </div>
+                                <div class="member-info">
+                                    <h3>TerminalOx</h3>
+                                    <p>Server Administrator</p>
+                                    <div class="member-socials">
+                                        <a href="mailto:alex@sandboxuniverse.mc" class="social-icon">📧</a>
+                                        <a href="#" class="social-icon">💬</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-member">
+                                <div class="member-avatar">
+                                    <img src="/assets/pics/kurt.jpg" alt="Daimon38">
+                                    <div class="avatar-border"></div>
+                                </div>
+                                <div class="member-info">
+                                    <h3>Daimon38</h3>
+                                    <p>Community Manager</p>
+                                    <div class="member-socials">
+                                        <a href="mailto:sam@sandboxuniverse.mc" class="social-icon">📧</a>
+                                        <a href="#" class="social-icon">💬</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="minecraft-form">
+                        <div class="form-title">
+                            <h3>Send a Message</h3>
+                        </div>
+                        <form id="messageForm">
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" required></textarea>
+                            </div>
+                            <button type="submit" class="submit-btn">Send Message</button>
+                        </form>
+                    </div>
+                </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2024 Sandbox Universe. All rights reserved.</p>
+        </footer>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
