--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandbox Universe - Minecraft Community</title>
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="icon" href="./public/favicon.webp">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/mediaqueries.css">
+    <link rel="stylesheet" href="./styles/utilityclasses.css">
 </head>
+
 <body>
     <div class="wrapper">
         <header>
-            <h1>Sandbox Universe</h1>
             <nav>
                 <ul>
                     <li><a href="#home" class="nav-link">Home</a></li>
@@ -23,9 +26,27 @@
         </header>
 
         <main>
-            <section id="home" class="section active">
-                <h2>Welcome to Sandbox Universe</h2>
-                <p>Your ultimate Minecraft community hub!</p>
+            <div class="homebg-slideshow-container">
+                <img src="./assets/img/homebg/homebg.webp" alt="home-bg" class="slides">
+                <img src="./assets/img/homebg/homebg2.webp" alt="home-bg" class="slides">
+                <img src="./assets/img/homebg/homebg3.webp" alt="home-bg" class="slides">
+                <img src="./assets/img/homebg/homebg4.webp" alt="home-bg" class="slides">
+                <img src="./assets/img/homebg/homebg5.webp" alt="home-bg" class="slides">
+                <img src="./assets/img/homebg/homebg5.webp" alt="home-bg" class="slides">
+                <img src="./assets/img/homebg/homebg6.webp" alt="home-bg" class="slides">
+                <img src="./assets/img/homebg/homebg7.webp" alt="home-bg" class="slides">
+                <img src="./assets/img/homebg/homebg8.webp" alt="home-bg" class="slides">
+                <img src="./assets/img/homebg/homebg9.webp" alt="home-bg" class="slides">
+            </div>
+            <section id="home" class="home-title">
+                <h1 class="mojang-font">Welcome to <span class="color-red">Sandbox Universe</span></h1>
+                <p>Welcome to your ultimate Minecraft community hub, a dynamic and immersive space where players
+                    from
+                    all around the world come together to explore, build, and collaborate. Whether you're an
+                    experienced
+                    builder, a Redstone engineer, or just someone looking to enjoy the game with others, this hub is
+                    designed to offer something for everyone.</p>
+                <button onclick="location.href='#servers'">GET STARTED</button>
             </section>
 
             <section id="about" class="section">
@@ -34,105 +55,119 @@
             </section>
 
             <section id="servers"></section>
-                <h2>Our Minecraft Servers</h2>
-                <div class="servers-carousel">
-                    <div class="carousel-container">
-                        <div class="server-card">
-                            <div class="server-card-image">
-                                <img src="/api/placeholder/300/200" alt="Survival Realm">
-                            </div>
-                            <div class="server-card-content">
-                                <h3>Survival Realm</h3>
-                                <p>Classic survival experience with a twist</p>
-                                <div class="server-details">
-                                    <div class="server-detail-item">
-                                        <span>🏆</span>
-                                        <p>PvE Focused</p>
-                                    </div>
-                                    <div class="server-detail-item">
-                                        <span>💰</span>
-                                        <p>Economy System</p>
-                                    </div>
-                                    <div class="server-ip">
-                                        <input type="text" value="survival.sandboxuniverse.mc" readonly>
-                                        <button class="copy-ip">Copy IP</button>
-                                    </div>
+            <h1>Our Minecraft Servers</h1>
+            <div class="servers-carousel">
+                <div class="carousel-container">
+                    <div class="server-card">
+                        <div class="server-card-image">
+                            <img src="/api/placeholder/300/200" alt="Survival Realm">
+                        </div>
+                        <div class="server-card-content">
+                            <h3>Survival Realm</h3>
+                            <p>Classic survival experience with a twist</p>
+                            <div class="server-details">
+                                <div class="server-detail-item">
+                                    <span>🏆</span>
+                                    <p>PvE Focused</p>
+                                </div>
+                                <div class="server-detail-item">
+                                    <span>💰</span>
+                                    <p>Economy System</p>
+                                </div>
+                                <div class="server-ip">
+                                    <input type="text" value="survival.sandboxuniverse.mc" readonly>
+                                    <button class="copy-ip">Copy IP</button>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-controls">
-                            <button class="prev-btn">◀</button>
-                            <button class="next-btn">▶</button>
+                    </div>
+                    <div class="carousel-controls">
+                        <button class="prev-btn">◀</button>
+                        <button class="next-btn">▶</button>
+                    </div>
+                </div>
+            </div>
+            </img>
+
+            </section>
+
+            <section id="contacts">
+                <h2>Our Team</h2>
+                <div class="team-container">
+                    <div class="team-members">
+                        <div class="team-member">
+                            <div class="member-avatar">
+                                <img src="/assets/img/pfp/ivan.jpeg" alt="">
+                                <div class="avatar-border"></div>
+                            </div>
+                            <div class="member-info">
+                                <h3>TerminalOx</h3>
+                                <p>Server Administrator</p>
+                                <div class="member-socials">
+                                    <a href="mailto:alex@sandboxuniverse.mc" class="social-icon">📧</a>
+                                    <a href="#" class="social-icon">💬</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-member">
+                            <div class="member-avatar">
+                                <img src="/assets/img/pfp/kurt.jpg" alt="Daimon38">
+                                <div class="avatar-border"></div>
+                            </div>
+                            <div class="member-info">
+                                <h3>Daimon38</h3>
+                                <p>Community Manager</p>
+                                <div class="member-socials">
+                                    <a href="mailto:sam@sandboxuniverse.mc" class="social-icon">📧</a>
+                                    <a href="#" class="social-icon">💬</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </section>
-  
-            </section>
 
-                <section id="contacts">
-                    <h2>Our Team</h2>
-                    <div class="team-container">
-                        <div class="team-members">
-                            <div class="team-member">
-                                <div class="member-avatar">
-                                    <img src="/assets/pics/ivan.jpeg" alt="">
-                                    <div class="avatar-border"></div>
-                                </div>
-                                <div class="member-info">
-                                    <h3>TerminalOx</h3>
-                                    <p>Server Administrator</p>
-                                    <div class="member-socials">
-                                        <a href="mailto:alex@sandboxuniverse.mc" class="social-icon">📧</a>
-                                        <a href="#" class="social-icon">💬</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="team-member">
-                                <div class="member-avatar">
-                                    <img src="/assets/pics/kurt.jpg" alt="Daimon38">
-                                    <div class="avatar-border"></div>
-                                </div>
-                                <div class="member-info">
-                                    <h3>Daimon38</h3>
-                                    <p>Community Manager</p>
-                                    <div class="member-socials">
-                                        <a href="mailto:sam@sandboxuniverse.mc" class="social-icon">📧</a>
-                                        <a href="#" class="social-icon">💬</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                <div class="minecraft-form">
+                    <div class="form-title">
+                        <h3>Send a Message</h3>
                     </div>
-    
-                    <div class="minecraft-form">
-                        <div class="form-title">
-                            <h3>Send a Message</h3>
+                    <form id="messageForm">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name" required>
                         </div>
-                        <form id="messageForm">
-                            <div class="form-group">
-                                <label for="name">Name</label>
-                                <input type="text" id="name" name="name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" id="email" name="email" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea id="message" name="message" required></textarea>
-                            </div>
-                            <button type="submit" class="submit-btn">Send Message</button>
-                        </form>
-                    </div>
-                </section>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" required></textarea>
+                        </div>
+                        <button type="submit" class="submit-btn">Send Message</button>
+                    </form>
+                </div>
+            </section>
         </main>
 
         <footer>
-            <p>&copy; 2024 Sandbox Universe. All rights reserved.</p>
+            <svg class="logo" width="28" height="28" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M10.7631 1.78588L8.99997 2.80383V5.11323L9.99999 5.69059L12 4.53591L12 2.50001L14 2.50001L14 4.53589L15.7631 5.55385L14.7631 7.2859L13 6.26795L11 7.42265V8.57735L13 9.73205L14.7631 8.7141L15.7631 10.4461L14 11.4641V13.5H12V11.4641L9.99997 10.3094L8.99997 10.8867V13.1961L10.7631 14.2141L9.76311 15.9461L7.99999 14.9282L6.23683 15.9462L5.23683 14.2141L6.99997 13.1962V10.8867L5.99999 10.3094L3.99997 11.4641L3.99997 13.5H1.99997L1.99997 11.4641L0.236816 10.4462L1.23682 8.71411L2.99995 9.73206L4.99997 8.57735V7.42264L2.99999 6.26795L1.23685 7.2859L0.236847 5.55385L1.99997 4.53591L1.99997 2.5H3.99997L3.99997 4.53589L5.99997 5.69059L6.99997 5.11324V2.80385L5.23684 1.7859L6.23684 0.0538512L7.99996 1.07179L9.76311 0.053833L10.7631 1.78588ZM8.99997 8C8.99997 8.55228 8.55225 9 7.99997 9C7.44768 9 6.99997 8.55228 6.99997 8C6.99997 7.44771 7.44768 7 7.99997 7C8.55225 7 8.99997 7.44771 8.99997 8Z" />
+            </svg>
+            <p>
+                Thank you for visiting <span class="color-red">Sandbox Universe</span>.
+            </p>
+            <p>
+                © Sandbox Universe. 2024. All rights reserved.
+            </p>
+            <p>
+                The source code is available on <a
+                    href="https://github.com/ivanreeve/mcwebsite"><b><u>Github</u></b></a>
+            </p>
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
+
 </html>
