feat: mod section

--- a/index.html
+++ b/index.html
@@ -81,29 +81,30 @@
                     and inspire others, all while pushing the limits of imagination and game mechanics.</p>
             </section>
 
-            <section id="servers"></section>
-            <h1>Our Minecraft Servers</h1>
-            <div class="servers-carousel">
-                <div class="carousel-container">
-                    <div class="server-card">
-                        <div class="server-card-image">
-                            <img src="/api/placeholder/300/200" alt="Survival Realm">
-                        </div>
-                        <div class="server-card-content">
-                            <h3>Survival Realm</h3>
-                            <p>Classic survival experience with a twist</p>
-                            <div class="server-details">
-                                <div class="server-detail-item">
-                                    <span>🏆</span>
-                                    <p>PvE Focused</p>
-                                </div>
-                                <div class="server-detail-item">
-                                    <span>💰</span>
-                                    <p>Economy System</p>
-                                </div>
-                                <div class="server-ip">
-                                    <input type="text" value="survival.sandboxuniverse.mc" readonly>
-                                    <button class="copy-ip">Copy IP</button>
+            <section id="servers">
+                <h1>Our Minecraft Servers</h1>
+                <div class="servers-carousel">
+                    <div class="carousel-container">
+                        <div class="server-card">
+                            <div class="server-card-image">
+                                <img src="/api/placeholder/300/200" alt="Survival Realm">
+                            </div>
+                            <div class="server-card-content">
+                                <h3>Survival Realm</h3>
+                                <p>Classic survival experience with a twist</p>
+                                <div class="server-details">
+                                    <div class="server-detail-item">
+                                        <span>🏆</span>
+                                        <p>PvE Focused</p>
+                                    </div>
+                                    <div class="server-detail-item">
+                                        <span>💰</span>
+                                        <p>Economy System</p>
+                                    </div>
+                                    <div class="server-ip">
+                                        <input type="text" value="survival.sandboxuniverse.mc" readonly>
+                                        <button class="copy-ip">Copy IP</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -113,74 +114,89 @@
                         <button class="next-btn">▶</button>
                     </div>
                 </div>
-            </div>
-            </img>
-
             </section>
+            <section id="mods">
+                <div class="mods-main-title">
+                    <h1>What's New</h1>
+                </div>
+                <div class="mods-container">
+                    <div class="mods-card-container">
+                        <img src="./assets/img/mods/rlcraft.webp">
+                        <a href="https://www.curseforge.com/minecraft/modpacks/rlcraft">
+                            <div class="mods-title">
+                                RLCraft
+                                <div class="mods-subtitle">
+                                    RLCraft is a free video game utility that allows you to up the difficulty level of
+                                    your
+                                    vanilla Minecraft game to extreme measures.
+                                </div>
+                            </div>
 
-            <section id="contacts">
-                <h2>Our Team</h2>
-                <div class="team-container">
-                    <div class="team-members">
-                        <div class="team-member">
-                            <div class="member-avatar">
-                                <img src="/assets/img/pfp/ivan.jpeg" alt="">
-                                <div class="avatar-border"></div>
-                            </div>
-                            <div class="member-info">
-                                <h3>TerminalOx</h3>
-                                <p>Server Administrator</p>
-                                <div class="member-socials">
-                                    <a href="mailto:alex@sandboxuniverse.mc" class="social-icon">📧</a>
-                                    <a href="#" class="social-icon">💬</a>
+                        </a>
+                    </div>
+                    <div class="mods-card-container">
+                        <img src="./assets/img/mods/mowziemobs.png">
+                        <a href="https://www.curseforge.com/minecraft/mc-mods/mowzies-mobs">
+                            <div class=" mods-title">
+                                Mowzie's Mobs
+                                <div class="mods-subtitle">
+                                    Mowzie's Mobs adds a variety of fictional creatures to Minecraft, priding itself in
+                                    unique AI, rich atmosphere, and fluid animations.
                                 </div>
                             </div>
-                        </div>
-                        <div class="team-member">
-                            <div class="member-avatar">
-                                <img src="/assets/img/pfp/kurt.jpg" alt="Daimon38">
-                                <div class="avatar-border"></div>
-                            </div>
-                            <div class="member-info">
-                                <h3>Daimon38</h3>
-                                <p>Community Manager</p>
-                                <div class="member-socials">
-                                    <a href="mailto:sam@sandboxuniverse.mc" class="social-icon">📧</a>
-                                    <a href="#" class="social-icon">💬</a>
+                        </a>
+                    </div>
+                    <div class="mods-card-container">
+                        <img src="./assets/img/mods/furniture.jpg">
+                        <a href="https://www.curseforge.com/minecraft/mc-mods/mrcrayfish-furniture-mod">
+                            <div class="mods-title">
+                                Furniture Mod
+                                <div class="mods-subtitle">
+                                    MrCrayfish's Furniture Mod (Legacy) is the classic furniture mod started all the way
+                                    in
+                                    2011.
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
-
-                <div class="minecraft-form">
-                    <div class="form-title">
-                        <h3>Send a Message</h3>
-                    </div>
-                    <form id="messageForm">
-                        <div class="form-group">
+            </section>
+            <div class="contact__container" id="contacts">
+                <div class="contact__cta margin-bottom-1">
+                    <span class="contact__cta__header">
+                        Let's <span class="name">collaborate!</span>
+                    </span>
+                    <span class="sec__desc">
+                        Ready to discover the creative and professional journey I've crafted? Take a moment to get to
+                        know me better, explore my work, and see how I can bring your ideas to life. Let’s connect and
+                        create something amazing together!
+                    </span>
+                </div>
+                <div class="contact__form">
+                    <span class="contact__title">Fill out the form</span>
+                    <span class="sec__desc margin-bottom-1">Hi there! Ready to connect? Fill out the form below, and
+                        let's get started!</span>
+                    <form>
+                        <div>
                             <label for="name">Name</label>
                             <input type="text" id="name" name="name" required>
                         </div>
-                        <div class="form-group">
+                        <div>
                             <label for="email">Email</label>
                             <input type="email" id="email" name="email" required>
                         </div>
-                        <div class="form-group">
+                        <div>
                             <label for="message">Message</label>
-                            <textarea id="message" name="message" required></textarea>
+                            <textarea id="message" name="message" rows="5" required></textarea>
                         </div>
-                        <button type="submit" class="submit-btn">Send Message</button>
+                        <button class="submit-btn" type="submit">SEND MESSAGE</button>
                     </form>
                 </div>
+            </div>
             </section>
         </main>
 
         <footer>
-            <svg class="logo" width="28" height="28" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M10.7631 1.78588L8.99997 2.80383V5.11323L9.99999 5.69059L12 4.53591L12 2.50001L14 2.50001L14 4.53589L15.7631 5.55385L14.7631 7.2859L13 6.26795L11 7.42265V8.57735L13 9.73205L14.7631 8.7141L15.7631 10.4461L14 11.4641V13.5H12V11.4641L9.99997 10.3094L8.99997 10.8867V13.1961L10.7631 14.2141L9.76311 15.9461L7.99999 14.9282L6.23683 15.9462L5.23683 14.2141L6.99997 13.1962V10.8867L5.99999 10.3094L3.99997 11.4641L3.99997 13.5H1.99997L1.99997 11.4641L0.236816 10.4462L1.23682 8.71411L2.99995 9.73206L4.99997 8.57735V7.42264L2.99999 6.26795L1.23685 7.2859L0.236847 5.55385L1.99997 4.53591L1.99997 2.5H3.99997L3.99997 4.53589L5.99997 5.69059L6.99997 5.11324V2.80385L5.23684 1.7859L6.23684 0.0538512L7.99996 1.07179L9.76311 0.053833L10.7631 1.78588ZM8.99997 8C8.99997 8.55228 8.55225 9 7.99997 9C7.44768 9 6.99997 8.55228 6.99997 8C6.99997 7.44771 7.44768 7 7.99997 7C8.55225 7 8.99997 7.44771 8.99997 8Z" />
-            </svg>
             <p>
                 Thank you for visiting <span class="color-red">Sandbox Universe</span>.
             </p>
