fix design and responsiveness issues, chore: tidy up source code

--- a/index.html
+++ b/index.html
@@ -77,32 +77,45 @@
             </section>
 
             <section id="about" class="about-container">
-                <h2>About Our Community</h2>
-                <p>We are passionate and dedicated Minecraft players who thrive on creativity, working together to
-                    design and build amazing worlds, immersive landscapes, and unforgettable experiences that captivate
-                    and inspire others, all while pushing the limits of imagination and game mechanics.</p>
+                <div class="about-bg-container">
+                    <img src="./assets/img/end.jpg" alt="about-bg">
+                </div>
+                <div class="about-content">
+                    <center>
+                        <img src="./assets/img/gifs/ender-dragon.gif" alt="ender-dragon" width="300" height="300">
+                    </center>
+                    <h2 class="mojang-font">About Our Community</h2>
+                    <p>We are passionate and dedicated Minecraft players who thrive on creativity, working together to
+                        design and build amazing worlds, immersive landscapes, and unforgettable experiences that
+                        captivate
+                        and inspire others, all while pushing the limits of imagination and game mechanics.</p>
+                </div>
             </section>
 
             <section id="servers">
                 <div class="carousel-container">
                     <div class="carousel-wrapper">
                         <div class="carousel-slide active" data-server="survival">
-                            <div class="server-background" style="background-image: url('/assets/img/servers/server1.webp');"></div>
+                            <div class="server-background"
+                                style="background-image: url('/assets/img/servers/server1.webp');"></div>
                             <div class="server-content">
                                 <h2>Survival Realm</h2>
-                                <p>Classic survival experience with challenging gameplay and community-driven economy.</p>
+                                <p>Classic survival experience with challenging gameplay and community-driven economy.
+                                </p>
                                 <div class="server-details">
                                     <span>IP: survival.mcpe.net </span>
-                                        <span>Port:19132</span>
+                                    <span>Port:19132</span>
                                     <span>Players: 500/1000</span>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-slide" data-server="creative">
-                            <div class="server-background" style="background-image: url('/assets/img/servers/server2.webp');"></div>
+                            <div class="server-background"
+                                style="background-image: url('/assets/img/servers/server2.webp');"></div>
                             <div class="server-content">
                                 <h2>Creative World</h2>
-                                <p>Unlimited building space with advanced world edit tools and monthly building contests.</p>
+                                <p>Unlimited building space with advanced world edit tools and monthly building
+                                    contests.</p>
                                 <div class="server-details">
                                     <span>IP: creative.mcpe.net</span>
                                     <span>Port:19132</span>
@@ -111,7 +124,8 @@
                             </div>
                         </div>
                         <div class="carousel-slide" data-server="skyblock">
-                            <div class="server-background" style="background-image: url('/assets/img/servers/server3.webp');"></div>
+                            <div class="server-background"
+                                style="background-image: url('/assets/img/servers/server3.webp');"></div>
                             <div class="server-content">
                                 <h2>SkyBlock Challenge</h2>
                                 <p>Unique skyblock experience with custom plugins and weekly challenges.</p>
@@ -123,7 +137,8 @@
                             </div>
                         </div>
                         <div class="carousel-slide" data-server="pvp">
-                            <div class="server-background" style="background-image: url('/assets/img/servers/server4.webp');"></div>
+                            <div class="server-background"
+                                style="background-image: url('/assets/img/servers/server4.webp');"></div>
                             <div class="server-content">
                                 <h2>PvP Arena</h2>
                                 <p>Intense PvP combat with multiple game modes and competitive ranking system.</p>
@@ -135,7 +150,8 @@
                             </div>
                         </div>
                         <div class="carousel-slide" data-server="modded">
-                            <div class="server-background" style="background-image: url('/assets/img/servers/server5.webp');"></div>
+                            <div class="server-background"
+                                style="background-image: url('/assets/img/servers/server5.webp');"></div>
                             <div class="server-content">
                                 <h2>Modded Minecraft</h2>
                                 <p>Extensive mod pack with custom gameplay mechanics and unique world generation.</p>
@@ -205,7 +221,7 @@
                 <div class="developers-container">
                     <div class="developer-card">
                         <img src="/assets/img/pfp/ivan.jpeg" alt="Developer 1" class="developer-avatar">
-                        <h3>Ivan Reeve Lopez</h3>
+                        <h3 class="mojang-font">Ivan Reeve Lopez</h3>
                         <h4>TerminalOx</h4>
                         <p>Lead Developer & Minecraft Modding Specialist</p>
                         <div class="developer-socials">
@@ -215,10 +231,10 @@
                         </div>
                     </div>
 
-                    
+
                     <div class="developer-card">
                         <img src="/assets/img/pfp/kurt.jpg" alt="Developer 2" class="developer-avatar">
-                        <h3>Kurt Gliponeo</h3>
+                        <h3 class="mojang-font">Kurt Gliponeo</h3>
                         <h4>Daimon38</h4>
                         <p>Server Specialist & Texture Maker</p>
                         <div class="developer-socials">
@@ -230,23 +246,12 @@
                 </div>
             </section>
 
-            <img src="/assets/img/gifs/zombie.gif" alt="Minecraft GIF" class="minecraft-gif">
-            <img src="/assets/img/gifs/creeper.gif" alt="Minecraft GIF" class="minecraft-gif">
-            <img src="/assets/img/gifs/enderman.gif" alt="Minecraft GIF" class="minecraft-gif">
-            <img src="/assets/img/gifs/golem.gif" alt="Minecraft GIF" class="minecraft-gif">
-        
+
             <!-- Contacts Section -->
             <section id="contacts">
                 <div class="contact__container">
                     <div class="contact__cta margin-bottom-1">
-                        <span class="contact__cta__header">
-                            Let's <span class="name">collaborate!</span>
-                        </span>
-                        <span class="sec__desc">
-                            Ready to discover the creative and professional journey I've crafted? Take a moment to get to
-                            know me better, explore our work, and see how we can bring your ideas to life. Let's connect and
-                            create something amazing together!
-                        </span>
+                        <img src="/assets/img/gifs/creeper.gif" alt="Minecraft GIF" class="minecraft-gif">
                     </div>
                     <div class="contact__form">
                         <span class="contact__title">Fill out the form</span>
@@ -265,24 +270,25 @@
                                 <label for="message">Message</label>
                                 <textarea id="message" name="message" rows="5" required></textarea>
                             </div>
-                            <button class="submit-btn" type="submit">SEND MESSAGE</button>
+                            <button class="submit-btn" type="submit">SEND
+                                MESSAGE</button>
                         </form>
                     </div>
                 </div>
             </section>
 
-        <footer>
-            <p>
-                Thank you for visiting <span class="color-red">Sandbox Universe</span>.
-            </p>
-            <p>
-                © Sandbox Universe. 2024. All rights reserved.
-            </p>
-            <p>
-                The source code is available on <a
-                    href="https://github.com/ivanreeve/mcwebsite"><b><u>Github</u></b></a>
-            </p>
-        </footer>
+            <footer>
+                <p>
+                    Thank you for visiting <span class="color-red">Sandbox Universe</span>.
+                </p>
+                <p>
+                    © Sandbox Universe. 2024. All rights reserved.
+                </p>
+                <p>
+                    The source code is available on <a
+                        href="https://github.com/ivanreeve/mcwebsite"><b><u>Github</u></b></a>
+                </p>
+            </footer>
     </div>
 
     <script src="./scripts/script.js"></script>
